cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.h

/* the data type of the tensor */
#define TENGINE_DT_FP32 0
typedef void* context_t;
typedef void* graph_t;
typedef void* tensor_t;
typedef void* node_t;
typedef int (*event_handler_t)(graph_t, int, void* arg);
/* graph exec options */
struct options
{
    int num_thread;
    int cluster;
    int precision;
    uint64_t affinity;
};
/*!
 * @brief Set the buffer of the tensor.
 *    A tensor may deny to change its internal buffer setting.
 *
 * @param [in] tensor: The tensor handle.
 * @param [in] buffer: The buffer address.
 * @param [in] buffer_size: The buffer_size.
 *
 * @return 0: Success; -1: Fail.
 * @note  The buffer is still managed by caller.
 */
DLLEXPORT int set_tensor_buffer(tensor_t tensor, void* buffer, int buffer_size);
/*!
 * @brief Copy tensor data to the output data buffer.
 * @param [in] tensor: The tensor handle.
 * @param [out] output_data: The output data buffer.
 *
 * @param [in] data_size: the output buffer size.
 * @return 0: Success; or -1: Fail.
 *
 */
DLLEXPORT int get_tensor_data(tensor_t tensor, void* output_data, int data_size);
/*!
 * @brief Copy the data to tensor buffer.
 *
 * @param [in] tensor: The tensor handle.
 * @param [in] input_data: The input data.
 * @param [in] data_size: The input data size.
 *
 * @return 0: Success; -1: Fail.
 *
 */
DLLEXPORT int set_tensor_data(tensor_t tensor, const void* input_data, int data_size);
/*!
 * @brief Get the data type of the tensor.
 *
 * @param [in] tensor: The tensor handle.
 *
 * @return The tensor type, see TENGINE_DT_FP32 etc, -1 on error.
 */
DLLEXPORT int get_tensor_data_type(tensor_t tensor);
/*!
 * @brief Set the data type of the tensor.
 *
 * @param [in] tensor: The tensor handle.
 * @param [in] data_type: The data type. see TENGINE_DT_FP32 etc.
 *
 * @return 0 on sucess, -1 on error.
 */
DLLEXPORT int set_tensor_data_type(tensor_t tensor, int data_type);
/*!
 * @brief Set the data layout of the tensor.
 *
 * @param [in] tensor: The tensor handle.
 *
 * @return The tensor type, 0 : nchw, 1 : nhwc.
 */
DLLEXPORT int get_tensor_layout(tensor_t tensor);
/*!
 * @brief Set the data layout of the tensor.
 *
 * @param [in] tensor: The tensor handle.
 * @param [in] layout: The data layout, 0 : nchw, 1 : nhwc.
 *
 * @return 0 on sucess, -1 on error.
 */
DLLEXPORT int set_tensor_layout(tensor_t tensor, int layout);
/*!
 * @brief Set tensor quant parameters
 *
 * @param [in] tensor: The tensor handle.
 * @param [in] scale:  The scale array address.
 * @param [in] zero point: The zero point address.
 * @param [in] number:  The element number of array.
 *
 * @return 0 on sucess, -1 on error.
 */
DLLEXPORT int set_tensor_quant_param(tensor_t tensor, const float* scale, const int* zero_point, int number);
/*!
 * @brief Get tensor quant parameters.
 *
 * @param [in] tensor: The tensor handle.
 * @param [in] scale:  The scale array address.
 * @param [in] zero point: The zero point address.
 * @param [in] number:  The element number of array.
 *
 * @return 0 on sucess, -1 on error.
 */
DLLEXPORT int get_tensor_quant_param(tensor_t tensor, float* scale, int* zero_point, int number);
/************************** Graph run related interface *********************/

/*!
 * @brief The interface to get possible cpu mask bits, when specified cluster of cpu,
 *        function will return the mask bits of the cluster.
 *
 * @param [in] cluster: The be queried cluster.
 *
 * @return affinity mask.
 */
DLLEXPORT size_t get_cluster_affinity_mask(int cluster);
/*!
 * @brief The interface to set cluster and threads count will used.
 *
 * @param [in] graph: The graph handle.
 * @param [in] cluster: The wanted cluster of all cpu clusters.
 * @param [in] threads: The threads count of graph will used to run.
 *
 * @return 0: Success, -1: Fail.
 */
DLLEXPORT int set_graph_thread(graph_t graph, int cluster, int threads);
/*!
 * @brief The interface to directly set used cpu mask.
 *
 * @param [in] graph: The graph handle.
 * @param [in] cpu_mask: The mask bits of graph will used to run.
 *
 * @return 0: Success, -1: Fail.
 */
DLLEXPORT int set_graph_thread_mask(graph_t graph, size_t cpu_mask);
/*!
 * @brief The interface to set some proprietary attribute items for graph.
 *        The backend device to run the graph may use the attribute item.
 *
 * @param [in] graph: The graph handle.
 * @param [in] attr_name: The attribute name.
 * @param [in] buf: The buffer to hold data.
 * @param [in] size: The buffer size.
 *
 * @return 0: Success, -1: Fail.
 */
DLLEXPORT int set_graph_attr(graph_t graph, const char* attr_name, const void* buf, int size);
/*!
 * @brief The interface to get some proprietary config items for graph.
 *        It is probabaly the config will be passed to the DLA driver.
 * @param [in] graph: the graph handle.
 * @param [in] name: The attribute name.
 * @param [in] buf: The buffer to hold data.
 * @param [in] size: The buffer size.
 *
 * @return 0: Success, -1: Fail.
 *
 */
DLLEXPORT int get_graph_attr(graph_t graph, const char* attr_name, void* buf, int size);
/*!
 * @brief Initialize resource for graph execution, and set cluster and threads count will used.
 *
 * @param [in] graph: The graph handle.
 * @param [in] cluster: The wanted cluster of all cpu clusters.
 * @param [in] threads: The threads count of graph will used to run.
 *
 * @return 0: Success, -1: Fail.
 *
 */
DLLEXPORT int prerun_graph_multithread(graph_t graph, struct options opt);
/*!
 * @brief Initialize resource for graph execution.
 *
 * @param [in] graph: The graph handle.
 *
 * @return 0: Success, -1: Fail.
 *
 */
DLLEXPORT int prerun_graph(graph_t graph);
/*!
 * @brief Execute graph.
 *
 * @param [in] graph: The graph handle.
 * @param [in] block: Blocking or nonlocking.
 * @return 0: Success, -1: Fail.
 * @note  If block is 0, need to call wait_graph to get result or set GRAPH_DONE event hook.
 *
 */
DLLEXPORT int run_graph(graph_t graph, int block);
/*!
 * @brief Wait graph execution done.
 *
 * @param [in] graph: The graph handle.
 * @param [in] try_wait: If set, just check status and return.
 * @return  1: Graph is done.
 *          0: Try again.
 *
 */
DLLEXPORT int wait_graph(graph_t graph, int try_wait);
/*!
 * @brief Release the resource for graph execution.
 * @param [in] graph: graph handle.
 *
 * @return 0: Success, -1: Fail.
 */
DLLEXPORT int postrun_graph(graph_t graph);
/*!
 * @brief Get the status of graph execution.
 *
 * @param [in] graph: The graph handle.
 *
 * @return status
 */
DLLEXPORT int get_graph_exec_status(graph_t graph);
/*!
 * @brief Set the event hook for graph execution.
 *
 * @param [in] graph: The graph handle.
 * @param [in] event: The event to be hooked.
 * @param [in] cb_func: The callback funtion.
 * @param [in] cb_arg: The argument will be passed to callback function.
 * @return 0: Success, -1: Fail.
 *
 */
DLLEXPORT int set_graph_event_hook(graph_t graph, int event, event_handler_t cb_func, void* cb_arg);
/***************** Device related *****************************/

/*!
 * @set The default device.
 *
 * @param [in] device: The device name.
 * @return 0: valid, -1: invalid.
 *
 */
DLLEXPORT int set_default_device(const char* device);
/*!
 * @brief Set the device to execution a graph.
 *
 * @param [in] graph: The graph handle.
 * @param [in] dev_name: The device name to run the node.
 *
 * @return  =0: Bind success.
 *          <0: error.
 *
 */
DLLEXPORT int set_graph_device(graph_t graph, const char* dev_name);
/*!
 * @brief get the device the node runs on
 *
 * @param [in] node: the node handle
 *
 * @return the device name or NULL if no device assigned yet
 */
DLLEXPORT const char* get_node_device(node_t node);
/*!
 * @brief Get the default name of device.
 *
 * @return The name of the default device.
 */
DLLEXPORT const char* get_default_device(void);
/******************** execution context *****************************/

/*!
 * @brief Create one execution context with name.
 *
 * @param [in] context_name: The name of the created context.
 * @param [in] empty_context: No device is assigned with this context
 *                            otherwise, all proved devices will be added into the context.
 *
 * @return Execution context handle.
 *         If create Failed, return NULL.
 */
DLLEXPORT context_t create_context(const char* context_name, int empty_context);
/*!
 * @brief Destory and reclaim the resource related with the context.
 *
 * @param [in] context: The context handle.
 */
DLLEXPORT void destroy_context(context_t context);