cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.rs

extern "C" {
    #[doc = " @brief Set the buffer of the tensor."]
    #[doc = "    A tensor may deny to change its internal buffer setting."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [in] buffer: The buffer address."]
    #[doc = " @param [in] buffer_size: The buffer_size."]
    #[doc = ""]
    #[doc = " @return 0: Success; -1: Fail."]
    #[doc = " @note  The buffer is still managed by caller."]
    pub fn set_tensor_buffer(
        tensor: tensor_t,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Copy tensor data to the output data buffer."]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [out] output_data: The output data buffer."]
    #[doc = ""]
    #[doc = " @param [in] data_size: the output buffer size."]
    #[doc = " @return 0: Success; or -1: Fail."]
    #[doc = ""]
    pub fn get_tensor_data(
        tensor: tensor_t,
        output_data: *mut ::std::os::raw::c_void,
        data_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Copy the data to tensor buffer."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [in] input_data: The input data."]
    #[doc = " @param [in] data_size: The input data size."]
    #[doc = ""]
    #[doc = " @return 0: Success; -1: Fail."]
    #[doc = ""]
    pub fn set_tensor_data(
        tensor: tensor_t,
        input_data: *const ::std::os::raw::c_void,
        data_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the data type of the tensor."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = ""]
    #[doc = " @return The tensor type, see TENGINE_DT_FP32 etc, -1 on error."]
    pub fn get_tensor_data_type(tensor: tensor_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the data type of the tensor."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [in] data_type: The data type. see TENGINE_DT_FP32 etc."]
    #[doc = ""]
    #[doc = " @return 0 on sucess, -1 on error."]
    pub fn set_tensor_data_type(
        tensor: tensor_t,
        data_type: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the data layout of the tensor."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = ""]
    #[doc = " @return The tensor type, 0 : nchw, 1 : nhwc."]
    pub fn get_tensor_layout(tensor: tensor_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the data layout of the tensor."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [in] layout: The data layout, 0 : nchw, 1 : nhwc."]
    #[doc = ""]
    #[doc = " @return 0 on sucess, -1 on error."]
    pub fn set_tensor_layout(
        tensor: tensor_t,
        layout: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set tensor quant parameters"]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [in] scale:  The scale array address."]
    #[doc = " @param [in] zero point: The zero point address."]
    #[doc = " @param [in] number:  The element number of array."]
    #[doc = ""]
    #[doc = " @return 0 on sucess, -1 on error."]
    pub fn set_tensor_quant_param(
        tensor: tensor_t,
        scale: *const f32,
        zero_point: *const ::std::os::raw::c_int,
        number: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get tensor quant parameters."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [in] scale:  The scale array address."]
    #[doc = " @param [in] zero point: The zero point address."]
    #[doc = " @param [in] number:  The element number of array."]
    #[doc = ""]
    #[doc = " @return 0 on sucess, -1 on error."]
    pub fn get_tensor_quant_param(
        tensor: tensor_t,
        scale: *mut f32,
        zero_point: *mut ::std::os::raw::c_int,
        number: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief The interface to get possible cpu mask bits, when specified cluster of cpu,"]
    #[doc = "        function will return the mask bits of the cluster."]
    #[doc = ""]
    #[doc = " @param [in] cluster: The be queried cluster."]
    #[doc = ""]
    #[doc = " @return affinity mask."]
    pub fn get_cluster_affinity_mask(cluster: ::std::os::raw::c_int) -> size_t;
}
extern "C" {
    #[doc = " @brief The interface to set cluster and threads count will used."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] cluster: The wanted cluster of all cpu clusters."]
    #[doc = " @param [in] threads: The threads count of graph will used to run."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    pub fn set_graph_thread(
        graph: graph_t,
        cluster: ::std::os::raw::c_int,
        threads: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief The interface to directly set used cpu mask."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] cpu_mask: The mask bits of graph will used to run."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    pub fn set_graph_thread_mask(graph: graph_t, cpu_mask: size_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief The interface to set some proprietary attribute items for graph."]
    #[doc = "        The backend device to run the graph may use the attribute item."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] attr_name: The attribute name."]
    #[doc = " @param [in] buf: The buffer to hold data."]
    #[doc = " @param [in] size: The buffer size."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    pub fn set_graph_attr(
        graph: graph_t,
        attr_name: *const ::std::os::raw::c_char,
        buf: *const ::std::os::raw::c_void,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief The interface to get some proprietary config items for graph."]
    #[doc = "        It is probabaly the config will be passed to the DLA driver."]
    #[doc = " @param [in] graph: the graph handle."]
    #[doc = " @param [in] name: The attribute name."]
    #[doc = " @param [in] buf: The buffer to hold data."]
    #[doc = " @param [in] size: The buffer size."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    #[doc = ""]
    pub fn get_graph_attr(
        graph: graph_t,
        attr_name: *const ::std::os::raw::c_char,
        buf: *mut ::std::os::raw::c_void,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Initialize resource for graph execution, and set cluster and threads count will used."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] cluster: The wanted cluster of all cpu clusters."]
    #[doc = " @param [in] threads: The threads count of graph will used to run."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    #[doc = ""]
    pub fn prerun_graph_multithread(graph: graph_t, opt: options) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Initialize resource for graph execution."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    #[doc = ""]
    pub fn prerun_graph(graph: graph_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Execute graph."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] block: Blocking or nonlocking."]
    #[doc = " @return 0: Success, -1: Fail."]
    #[doc = " @note  If block is 0, need to call wait_graph to get result or set GRAPH_DONE event hook."]
    #[doc = ""]
    pub fn run_graph(graph: graph_t, block: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Wait graph execution done."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] try_wait: If set, just check status and return."]
    #[doc = " @return  1: Graph is done."]
    #[doc = "          0: Try again."]
    #[doc = ""]
    pub fn wait_graph(graph: graph_t, try_wait: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Release the resource for graph execution."]
    #[doc = " @param [in] graph: graph handle."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    pub fn postrun_graph(graph: graph_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the status of graph execution."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = ""]
    #[doc = " @return status"]
    pub fn get_graph_exec_status(graph: graph_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the event hook for graph execution."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] event: The event to be hooked."]
    #[doc = " @param [in] cb_func: The callback funtion."]
    #[doc = " @param [in] cb_arg: The argument will be passed to callback function."]
    #[doc = " @return 0: Success, -1: Fail."]
    #[doc = ""]
    pub fn set_graph_event_hook(
        graph: graph_t,
        event: ::std::os::raw::c_int,
        cb_func: event_handler_t,
        cb_arg: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @set The default device."]
    #[doc = ""]
    #[doc = " @param [in] device: The device name."]
    #[doc = " @return 0: valid, -1: invalid."]
    #[doc = ""]
    pub fn set_default_device(device: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the device to execution a graph."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] dev_name: The device name to run the node."]
    #[doc = ""]
    #[doc = " @return  =0: Bind success."]
    #[doc = "          <0: error."]
    #[doc = ""]
    pub fn set_graph_device(
        graph: graph_t,
        dev_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief get the device the node runs on"]
    #[doc = ""]
    #[doc = " @param [in] node: the node handle"]
    #[doc = ""]
    #[doc = " @return the device name or NULL if no device assigned yet"]
    pub fn get_node_device(node: node_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Get the default name of device."]
    #[doc = ""]
    #[doc = " @return The name of the default device."]
    pub fn get_default_device() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Create one execution context with name."]
    #[doc = ""]
    #[doc = " @param [in] context_name: The name of the created context."]
    #[doc = " @param [in] empty_context: No device is assigned with this context"]
    #[doc = "                            otherwise, all proved devices will be added into the context."]
    #[doc = ""]
    #[doc = " @return Execution context handle."]
    #[doc = "         If create Failed, return NULL."]
    pub fn create_context(
        context_name: *const ::std::os::raw::c_char,
        empty_context: ::std::os::raw::c_int,
    ) -> context_t;
}
extern "C" {
    #[doc = " @brief Destory and reclaim the resource related with the context."]
    #[doc = ""]
    #[doc = " @param [in] context: The context handle."]
    pub fn destroy_context(context: context_t);
}
